// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogPostList /> should render with h2 heading 1`] = `
<div>
  <article
    className="flex flex-col items-start justify-between"
  >
    <header>
      <h2>
        <span
          className="hover:underline"
        >
          <a
            href="/blog/advanced-static-website-hosting-with-amazon-s3-and-cloudfront/"
          >
            Advanced static website hosting with Amazon S3 and CloudFront
          </a>
        </span>
      </h2>
      <time
        dateTime="2023-05-29T18:00:00.000Z"
      >
        May 29, 2023
      </time>
      <p>
        Today we will dive deep into the world of hosting a static website on Amazon S3 using CloudFront. If you’re looking for a secure, reliable, scalable, cost effective and performant solution, you’ve come to the right place. In this blog post, we’ll...
      </p>
    </header>
  </article>
  <article
    className="flex flex-col items-start justify-between"
  >
    <header>
      <h2>
        <span
          className="hover:underline"
        >
          <a
            href="/blog/hosting-a-static-website-on-amazon-s3/"
          >
            Hosting a static website on Amazon S3
          </a>
        </span>
      </h2>
      <time
        dateTime="2023-05-04T17:58:32.000Z"
      >
        May 4, 2023
      </time>
      <p>
        Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option for hosting a static website on AWS is to use Amazon S3. In this post, we will walk through the steps to host a...
      </p>
    </header>
  </article>
  <article
    className="flex flex-col items-start justify-between"
  >
    <header>
      <h2>
        <span
          className="hover:underline"
        >
          <a
            href="/blog/hello-world/"
          >
            Hello, World!
          </a>
        </span>
      </h2>
      <time
        dateTime="2023-05-01T10:10:05.000Z"
      >
        May 1, 2023
      </time>
      <p>
        As a software engineer, I can’t think of a better way to start my blog than with the classic “Hello, World!“. For those unfamiliar with the term, “Hello, World!” is often the first program developers write when learning a new programming language or...
      </p>
    </header>
  </article>
</div>
`;

exports[`<BlogPostList /> should render with h3 heading 1`] = `
<div>
  <article
    className="flex flex-col items-start justify-between"
  >
    <header>
      <h3>
        <span
          className="hover:underline"
        >
          <a
            href="/blog/advanced-static-website-hosting-with-amazon-s3-and-cloudfront/"
          >
            Advanced static website hosting with Amazon S3 and CloudFront
          </a>
        </span>
      </h3>
      <time
        dateTime="2023-05-29T18:00:00.000Z"
      >
        May 29, 2023
      </time>
      <p>
        Today we will dive deep into the world of hosting a static website on Amazon S3 using CloudFront. If you’re looking for a secure, reliable, scalable, cost effective and performant solution, you’ve come to the right place. In this blog post, we’ll...
      </p>
    </header>
  </article>
  <article
    className="flex flex-col items-start justify-between"
  >
    <header>
      <h3>
        <span
          className="hover:underline"
        >
          <a
            href="/blog/hosting-a-static-website-on-amazon-s3/"
          >
            Hosting a static website on Amazon S3
          </a>
        </span>
      </h3>
      <time
        dateTime="2023-05-04T17:58:32.000Z"
      >
        May 4, 2023
      </time>
      <p>
        Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option for hosting a static website on AWS is to use Amazon S3. In this post, we will walk through the steps to host a...
      </p>
    </header>
  </article>
  <article
    className="flex flex-col items-start justify-between"
  >
    <header>
      <h3>
        <span
          className="hover:underline"
        >
          <a
            href="/blog/hello-world/"
          >
            Hello, World!
          </a>
        </span>
      </h3>
      <time
        dateTime="2023-05-01T10:10:05.000Z"
      >
        May 1, 2023
      </time>
      <p>
        As a software engineer, I can’t think of a better way to start my blog than with the classic “Hello, World!“. For those unfamiliar with the term, “Hello, World!” is often the first program developers write when learning a new programming language or...
      </p>
    </header>
  </article>
</div>
`;
